--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store": "5.2.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
+    "uuid": "3.2.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
